# Square-Bot

./: .gitignore  Caddyfile  Caddyfile.example  Dockerfile  Justfile  README.md  config.example.toml  docker-compose.yml  example.config.toml  main.py  pyproject.toml  requirements.txt
cogs/: ai.py  auto_moderation.py  automeme.py  automod.py  devs.py  error_handler.py  eval.py  fun.py  help.py  info.py  mass_moderation.py  mod_logs.py  moderation.py  music.py  settings.py  tickets.py
configs/: config.json  config.json.example  default_emoji.json  emoji.json  example.config.json
containers/: Dockerfile  Dockerfile.drizzle
core/: __init__.py  view.py
db/: __init__.py  schema.py
db/funcs/: dev.py  guild.py
music/: client.py  equalizer_presets.py  player.py  queue.py  recommend.py  store.py  utils.py
music/sources/: spotify.py
utils/: check.py  config.py  database.py  emoji.py  helpers.py  logger.py  temp.py  utils.py  view.py
