[project]
name = "square"
version = "1.5.5"
description = "Advanced multipurpose discord bot for all your needs."
license = "GPL-3.0"
readme = "README.md"
authors = [{ name = "Swayam" }]
requires-python = ">=3.13"
dependencies = [
    "aerich[toml]>=0.9.0",
    "aiohttp>=3.12.4",
    "babel>=2.17.0",
    "lavalink>=5.9.0",
    "psutil>=7.0.0",
    "py-cord",
    "pyfiglet>=1.0.2",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "toml>=0.10.2",
    "tortoise-orm[asyncpg]>=0.25.0",
]

[tool.uv.sources.py-cord]
git = "https://github.com/Pycord-Development/pycord"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
no-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.aerich]
tortoise_orm = "db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[dependency-groups]
dev = ["ruff>=0.11.12"]
